CMAKE_MINIMUM_REQUIRED(VERSION 2.8.2)
if(CMAKE_EXTRA_GENERATOR)
	message("WARNING: resetting CMAKE_GENERATOR from ->${CMAKE_GENERATOR}<- to --->${CMAKE_EXTRA_GENERATOR}<-")
	set(CMAKE_GENERATOR ${CMAKE_EXTRA_GENERATOR})
endif()
include(../../CMakeModules/AssemblySetup.cmake)
debug_message("configuring with generator -->${CMAKE_GENERATOR}<--")

set(CMAKE_PREFIX_PATH 
         ${CMAKE_BINARY_DIR}/../libraries/install_boost 
)


  FIND_PACKAGE(Git)
  IF(Git_FOUND)
	MESSAGE("Git exec-->${GIT_EXECUTABLE}<--")
  ENDIF(Git_FOUND)
if(UNIX)
  set(MESSAGE_DEBUG_ACTIVE ON)
  debug_message("configuring with generator -->${CMAKE_GENERATOR}<--")
  set(CMAKE_VERBOSE_MAKEFILE ON)
  add_external_package_dir(ZLIB)
  set(EXTERNAL_ASSEMBLY_BUILD_SHARED ON)
  add_external_package_dir(PNG)
  set(EXTERNAL_ASSEMBLY_BUILD_SHARED ${EXTERNAL_ASSEMBLY_BUILD_SHARED_HINT})
  add_external_package_dir(GTK2 2.18.9)
  add_external_package_dir(wxWidgets 2.8.11)
endif()
#add_external_package_dir(Firebreath luigicalori-cmake)
add_external_package_dir(Firebreath 1.4.beta)
