cmake_minimum_required(VERSION 2.8)
if(CMAKE_EXTRA_GENERATOR)
	message("WARNING: resetting CMAKE_GENERATOR from ->${CMAKE_GENERATOR}<- to --->${CMAKE_EXTRA_GENERATOR}<-")
	set(CMAKE_GENERATOR ${CMAKE_EXTRA_GENERATOR})
endif()
include(../../CMakeModules/AssemblySetup.cmake)
debug_message("configuring with generator -->${CMAKE_GENERATOR}<--")
find_package(PythonInterp)
message("PYTHON_EXECUTABLE-->${PYTHON_EXECUTABLE}<--")
get_filename_component(_tmp ${CMAKE_MAKE_PROGRAM} PATH)
get_filename_component(_tmp ${_tmp} PATH)
get_filename_component(_tmp ${_tmp} PATH)
set(_vcvars ${_tmp}/VC/vcvarsall.bat)
if(EXISTS ${_vcvars})
	file(TO_NATIVE_PATH ${_vcvars} _vcvars)
	message(" to setup, do -->${_vcvars} ${CMAKE_SYSTEM_PROCESSOR}<--")
endif()
message("CMAKE_MAKE_PROGRAM-->${CMAKE_MAKE_PROGRAM}<->CMAKE_BUILD_TOOL->${CMAKE_BUILD_TOOL}<-- CMAKE_CXX_COMPILER ->${CMAKE_CXX_COMPILER}<- CMAKE_SYSTEM_PROCESSOR -->${CMAKE_SYSTEM_PROCESSOR}<--  ->${_tmp}/VC/vcvars.bat")

add_external_package_dir(QT)
add_external_package_dir(nasm 2.07)
add_external_package_dir(Python 2.6.5)
add_external_package_dir(OpenSSL 0.9.8n)

add_external_package_dir(Paramiko)

